--- a/CSS/biographyStyle.css
+++ b/CSS/biographyStyle.css
@@ -1,6 +1,7 @@
 body {
     font-family: Montserrat, sans-serif;
     background-color: #FDFAE1;
+    color: #662E9B;
 }
 
 .navigation {
@@ -123,7 +124,7 @@ body {
 .biography div > h2 {
     font-size: 2.25em;
     font-weight: 800;
-    color: #662E9B;
+    color: #EF6F6C;
 }
 
 .biography div > .proceed {
