--- a/CSS/destinyStyle.css
+++ b/CSS/destinyStyle.css
@@ -1,7 +1,6 @@
 body {
     font-family: Montserrat, sans-serif;
     background-color: #FDFAE1;
-    color: #662E9B;
 }
 
 .navigation {
@@ -39,7 +38,7 @@ body {
 
 .heading {
     max-width: 90%;
-    margin: auto;
+    margin: 4em auto 1em;
     text-align: center;
 }
 
@@ -47,11 +46,11 @@ body {
     display: inline-block;
     max-width: 40%;
     height: auto;
-    margin: 1em;
+    margin: 1em 1em 1em 4em;
     vertical-align: middle;
 }
 
-.image > img {
+.heading .image > img {
     max-width: 80%;
     height: auto;
     margin: 2em;
@@ -106,116 +105,47 @@ body {
     font-weight: 600;
 }
 
-.basic-info {
-    text-align: center;
-    margin-top: 15em;
+.content {
+    margin-top: 14em;
 }
 
-.basic-info > div {
+.content > div {
+    text-align: center;
+}
+
+.para > div {
     display: inline-block;
     max-width: 45%;
-    height: auto;
-    margin: 1em;
     vertical-align: middle;
 }
 
-.basic-info .image a > img {
-    max-width: 75%;
-    height: auto;
-    border-radius: 25px;
-}
-
-.basic-info .text > h1 {
-    font-size: 4em;
-    margin: 1em 1em 0em;
-    font-weight: 800;
-    color:#662E9B
-}
-
-.basic-info .text > h2 {
-    margin-top: 0.5em;
-    font-size: 2em;
-    font-weight: 600;
-    font-style: italic;
-    color:#EF6F6C;
-}
-
-.basic-info .text > h3 {
-    font-weight: 500;
-    margin: 0;
-    color:#662E9B;
-}
-
-#content {
-    margin: 1em 12em 1em;
-    font-size: 1.25em;
-}
-
-.description {
-    text-indent: 4em;
-}
-
-.skills-list > li {
-    padding: 1em;
-}
-
-li.category {
-    font-size: 2em;
-    font-weight: 800;
-    color: #662E9B;
-    text-align: center;
-    margin: 1em 0em 1em;
-    padding: 0;
-
-    list-style-position: inside;
-}
-
-.basic-information {
+.para .image a > img {
+    max-width: 80%;
     margin: 2em;
+    border-radius: 2em;
 }
 
-.basic-information > .title {
-    font-weight: 600;
-    color: #EF6F6C;
+.para .text > p {
+    font-size: 1.25em;
+    text-align: justify;
+    text-indent: 4em;
+    color: #662E9B;
+    font-weight: 500;
+    line-height: 1.75em;
 }
 
-.basic-information > .establishment {
-    font-style: italic;
-}
-
-.basic-information > .duration {
-    font-size: 0.875em;
-}
-
-.takeaways {
-    list-style-position: inside;
-    margin: 0.5em 3em 0.5em;
-}
-
-.seminar-list > li {
-    padding: 1em 3em 1em;
-    list-style-position: inside;
-    list-style-type: circle;
-}
-
-.format > ul {
-    margin: 1em 15em 1em;
-    list-style-position: inside;
-    list-style-type: square;
-}
-
-.format > h3 {
-    text-align: center;
-    font-weight: 800;
-    color: #EF6F6C;
+hr {
+    max-width: 75%;
+    background-color: #EF6F6C;
+    border: 2px ridge #662E9B;
 }
 
 .back-to-top {
     text-align: center;
     font-size: 1.125em;
-    width: 20%;
-    margin: 3em auto 1em;
-    padding: 0.5em 2em 0.5em;
+    width: 10%;
+    margin: 1em auto 1em;
+    padding: 1em 2em 1em;
     background-color: #EF6F6C;
     border-radius: 15px;
 }
@@ -234,7 +164,7 @@ li.category {
     text-align: center;
     font-size: 1.125em;
     width: 15%;
-    margin: 8em auto 4em;
+    margin: 5em auto 4em;
     padding: 1em 2em 1em;
     background-color: #662E9B;
     border-radius: 15px;
