--- a/CSS/odysseyStyle.css
+++ b/CSS/odysseyStyle.css
@@ -1,7 +1,6 @@
 body {
     font-family: Montserrat, sans-serif;
     background-color: #FDFAE1;
-    color: #662E9B;
 }
 
 .navigation {
@@ -38,28 +37,22 @@ body {
 }
 
 .heading {
-    max-width: 90%;
-    margin: auto;
+    max-width: 100%;
+    margin: 1em auto 2em;
     text-align: center;
 }
 
 .heading > div {
     display: inline-block;
-    max-width: 40%;
     height: auto;
     margin: 1em;
-    vertical-align: middle;
-}
-
-.image > img {
-    max-width: 80%;
-    height: auto;
-    margin: 2em;
-    border-radius: 25px;
+    vertical-align: top;
 }
 
 .heading > .text {
     text-align: left;
+    max-width: 40%;
+    margin-top: 7em;
 }
 
 .heading .text > h1 {
@@ -96,129 +89,33 @@ body {
     border-radius: 15px;
 }
 
-.start-reading > a {
-    color: #FDFAE1;
-    padding: 1em 3em 1em;
-    text-decoration: none;
-}
-
-.start-reading > a:hover {
-    font-weight: 600;
-}
-
-.basic-info {
+.image {
     text-align: center;
-    margin-top: 15em;
 }
 
-.basic-info > div {
-    display: inline-block;
-    max-width: 45%;
-    height: auto;
-    margin: 1em;
-    vertical-align: middle;
-}
-
-.basic-info .image a > img {
-    max-width: 75%;
-    height: auto;
-    border-radius: 25px;
-}
-
-.basic-info .text > h1 {
-    font-size: 4em;
-    margin: 1em 1em 0em;
-    font-weight: 800;
-    color:#662E9B
-}
-
-.basic-info .text > h2 {
-    margin-top: 0.5em;
-    font-size: 2em;
-    font-weight: 600;
-    font-style: italic;
-    color:#EF6F6C;
-}
-
-.basic-info .text > h3 {
-    font-weight: 500;
-    margin: 0;
-    color:#662E9B;
-}
-
-#content {
-    margin: 1em 12em 1em;
-    font-size: 1.25em;
+.image > img {
+    border-radius: 1em;
 }
 
 .description {
-    text-indent: 4em;
-}
-
-.skills-list > li {
-    padding: 1em;
-}
-
-li.category {
-    font-size: 2em;
-    font-weight: 800;
+    font-weight: 700;
     color: #662E9B;
     text-align: center;
-    margin: 1em 0em 1em;
-    padding: 0;
-
-    list-style-position: inside;
-}
-
-.basic-information {
-    margin: 2em;
-}
-
-.basic-information > .title {
-    font-weight: 600;
-    color: #EF6F6C;
-}
-
-.basic-information > .establishment {
-    font-style: italic;
-}
-
-.basic-information > .duration {
-    font-size: 0.875em;
-}
-
-.takeaways {
-    list-style-position: inside;
-    margin: 0.5em 3em 0.5em;
-}
-
-.seminar-list > li {
-    padding: 1em 3em 1em;
-    list-style-position: inside;
-    list-style-type: circle;
-}
-
-.format > ul {
-    margin: 1em 15em 1em;
-    list-style-position: inside;
-    list-style-type: square;
-}
-
-.format > h3 {
-    text-align: center;
-    font-weight: 800;
-    color: #EF6F6C;
+    font-size: 1.25em;
+    padding: 1em;
+    vertical-align: middle;
 }
 
 .back-to-top {
     text-align: center;
     font-size: 1.125em;
-    width: 20%;
-    margin: 3em auto 1em;
-    padding: 0.5em 2em 0.5em;
+    width: 10%;
+    margin: 1em auto;
+    padding: 1em 2em 1em;
     background-color: #EF6F6C;
     border-radius: 15px;
 }
+
 
 .back-to-top > a {
     color: #FDFAE1;
@@ -234,7 +131,7 @@ li.category {
     text-align: center;
     font-size: 1.125em;
     width: 15%;
-    margin: 8em auto 4em;
+    margin: 2em auto 4em;
     padding: 1em 2em 1em;
     background-color: #662E9B;
     border-radius: 15px;
