--- a/GUIRAO_orderSubmission_ITCD/GUIRAO_IMAGES_ITCD/orderForm.css
+++ b/GUIRAO_orderSubmission_ITCD/GUIRAO_IMAGES_ITCD/orderForm.css
@@ -71,7 +71,8 @@ input[type="text"], input[type="phone"], input[type="email"]{
   
 textarea{
     min-height: 8em;
-    min-width: 80%;
+    max-width: 100%;
+    min-width: 100%;
     padding: .5em;
     border: solid 1px #999;
     border-radius: 4px;
@@ -102,11 +103,11 @@ input[type="submit"]{
     margin-left: 700px;
     margin-right: auto;
     padding: .5em 1.5em;
-    border-radius: 6px;
-    background-color: black;
-    color: #fff;
+    border-radius: 10px;
+    background-color: #E55934;
+    color: #EADEDA;
     font-family: 'Tahoma', sans-serif;
-    font-size: 1em;
+    font-size: 1.25em;
 }
    
 @media screen and (min-width: 430px){
@@ -136,7 +137,8 @@ img.pageLogo {
 
 img.food {
     max-width: 90%;
-    height: 20em;
+    min-width: 90%;
+    height: 22em;
     margin: 2em;
     border-radius: 25px;
 }
@@ -231,8 +233,4 @@ a:hover {
 
 .back-to-top > a:hover {
     font-weight: 700;
-}
-
-tr {
-    text-align: center;
 }
