--- a/GROUP-3_Cryptocurrency/CSS/axieCryptoGamesStyle.css
+++ b/GROUP-3_Cryptocurrency/CSS/axieCryptoGamesStyle.css
@@ -210,7 +210,7 @@ i{
 
 
 
-.decetraland{
+.axie{
     background-color: rgb(105, 103, 100);
     border-radius: 2px;
     border-left: 3px solid #FFC857;
